--- a/src/posts/2017-03-24-HTML5.md
+++ b/src/posts/2017-03-24-HTML5.md
@@ -7,9 +7,7 @@ keywords: "Tutorial,Jekyll,gh-pages,website,blog,Git"
 categories: cate1
 tags: [Git,ee]
 iconb: fa icon-git
-name: "2017-03-24-HTML5"
+name: 2017-03-24-HTML5
 coverimg: "https://blog.zhangruipeng.me/hexo-theme-icarus/gallery/math.jpg"
 info: "Minos is a simple and retro styled Hexo theme which concentrates more on your ideas. Minos is very expressive as it has extensive plugin support, colorful code highlighting choices, flexible configurations and out-of-box multi-language support. Meanwhile"
 ---
- dsdadasdasdasd
- sdadas
