--- a/src/posts/2018-04-25-React.md
+++ b/src/posts/2018-04-25-React.md
@@ -12,7 +12,7 @@ info: "本文是 React 核心开发者、有 React API 终结者之称的 Sebast
 ---
 
 :::tip
-本文是 React 核心开发者、有 React API 终结者之称的 Sebastian Markbåge 撰写，阐述了他设计 React 的初衷。阅读此文，你能站在更高的高度思考 React 的过去、现在和未来。原文地址：https://github.com/reactjs/react-basic
+本文是 React 核心开发者、有 React API 终结者之称的 Sebastian Markbåge 撰写，阐述了他设计 React 的初衷。阅读此文，你能站在更高的高度思考 React 的过去、现在和未来。[原文地址](https://github.com/reactjs/react-basic)
 :::
 
 ## 目录
