replace jdown with gray-matter
Signed-off-by: 唐翼龙 <yilong.tang@1mifudao.com>

--- a/src/posts/2018-05-20-Vuepress.md
+++ b/src/posts/2018-05-20-Vuepress.md
@@ -1,6 +1,5 @@
 ---
 layout: post
-title:  "Create a theme for Vuepress?"
 date:   2018-05-20
 desc: "How to create your own Theme for Vuepress"
 keywords: "Tutorial,Jekyll,gh-pages,website,blog,Git"
@@ -8,13 +7,8 @@ categories: Vue
 tags: [Vue,Vuepress]
 name: README
 coverimg: "http://ww1.sinaimg.cn/large/88b26e1cgy1frpq5olvaqj20sg0lc126.jpg"
-info: "How to create your own Theme for Vuepress"
+info: How to create your own Theme for Vuepress
 ---
-
-
-:::tips
-[VuePress](https://github.com/docschina/vuepress) : 静态站点生成工具
-:::
 
 # License
 ![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)
