优化文件读取的方式，jdown存在无法读取对应文件头信息的bug
Signed-off-by: 唐翼龙 <yilong.tang@1mifudao.com>

--- a/src/posts/2018-05-20-Vuepress.md
+++ b/src/posts/2018-05-20-Vuepress.md
@@ -1,13 +1,14 @@
 ---
+title: How to create your own Theme for Vuepress
 layout: post
 date:   2018-05-20
-desc: "How to create your own Theme for Vuepress"
+desc: How to create your own Theme for Vuepress
 keywords: "Tutorial,Jekyll,gh-pages,website,blog,Git"
 categories: Vue
 tags: [Vue,Vuepress]
 name: README
 coverimg: "http://ww1.sinaimg.cn/large/88b26e1cgy1frpq5olvaqj20sg0lc126.jpg"
-info: How to create your own Theme for Vuepress
+info: 如果对Vuepress自带的主题不满意，如何自己来定制一个主题呢？
 ---
 
 # License
