--- a/src/posts/2018-05-20-Vuepress.md
+++ b/src/posts/2018-05-20-Vuepress.md
@@ -1,14 +1,12 @@
 ---
-title: How to create your own Theme for Vuepress
+name: "2018-05-20-Vuepress"
+title: "How to create your own Theme for Vuepress"
 layout: post
 date:   2018-05-20
-desc: How to create your own Theme for Vuepress
-keywords: "Tutorial,Jekyll,gh-pages,website,blog,Git"
 categories: Vue
-tags: [Vue,Vuepress]
-name: README
+tags: [Vue,Vuepress,Tutorial,Git]
 coverimg: "http://ww1.sinaimg.cn/large/88b26e1cgy1frpq5olvaqj20sg0lc126.jpg"
-info: 如果对Vuepress自带的主题不满意，如何自己来定制一个主题呢？
+info: "如果对Vuepress自带的主题不满意，如何自己来定制一个主题呢？"
 ---
 
 # License
@@ -30,7 +28,7 @@ info: 如果对Vuepress自带的主题不满意，如何自己来定制一个主
     - [如何定义我们自己的流程](#如何定义我们自己的流程)
         - [`package.json`里面关于`script`的配置](#packagejson里面关于script的配置)
         - [`doc`用来干嘛呢?你可能会有这样的问题](#doc用来干嘛呢你可能会有这样的问题)
-- [结语](#结语)
+- [结语](#结语)
   
 # Vuepress项目结构
 
@@ -244,6 +242,6 @@ if (!Object.assign) Object.assign = require('object-assign')`
 
 ![](http://ww1.sinaimg.cn/large/88b26e1cgy1fr8ytbl23sj20si07et9z.jpg)
 
-# 结语
+# 结语
 
 其实这篇教程没有涉及关于如何编写一个vuepress主题的内容,但是通过这样的配置,你已经可以自由发挥来设计你自己的主题了.如果对于这些有任何疑问,欢迎邮件交流~
