调整首页样式展示
Signed-off-by: 唐翼龙 <yilong.tang@1mifudao.com>

--- a/src/posts/2018-04-25-React.md
+++ b/src/posts/2018-04-25-React.md
@@ -5,7 +5,7 @@ title: "React 设计思想"
 date:  2018-04-25
 categories: React
 tags: [Tutorial,React]
-coverimg: "http://ww1.sinaimg.cn/large/88b26e1cgy1frpr39hxhnj20sg0lctha.jpg"
+coverimg: "https://ws1.sinaimg.cn/large/88b26e1cgy1fx5a7walm0j223z2u1b2b.jpg"
 info: "本文是 React 核心开发者、有 React API 终结者之称的 Sebastian Markbåge 撰写，阐述了他设计 React 的初衷。阅读此文，你能站在更高的高度思考 React 的过去、现在和未来。"
 ---
 
@@ -16,7 +16,7 @@ info: "本文是 React 核心开发者、有 React API 终结者之称的 Sebast
 ## 目录
 <!-- TOC -->
 
-- [目录](#目录)
+- [目录](#%E7%9B%AE%E5%BD%95)
 - [Transformation](#transformation)
 - [Abstraction](#abstraction)
 - [Composition](#composition)
