--- a/src/posts/2018-05-20-Vuepress.md
+++ b/src/posts/2018-05-20-Vuepress.md
@@ -1,11 +1,11 @@
 ---
 name: "2018-05-20-Vuepress"
-title: "How to create your own Theme for Vuepress"
+title: "Theming Vuepress"
 layout: post
 date:   2018-05-20
 categories: Vue
 tags: [Vue,Vuepress,Tutorial,Git]
-coverimg: "http://ww1.sinaimg.cn/large/88b26e1cgy1frpq5olvaqj20sg0lc126.jpg"
+coverimg: "https://ws1.sinaimg.cn/large/88b26e1cgy1fx5a8b5mv9j228w3dchdv.jpg"
 info: "如果对Vuepress自带的主题不满意，如何自己来定制一个主题呢？"
 ---
 
