--- a/src/posts/2018-05-27-Begin.md
+++ b/src/posts/2018-05-27-Begin.md
@@ -5,7 +5,7 @@ layout: post
 date:   2018-05-20
 categories: LIFE
 tags: [LIFE]
-coverimg: "http://ww1.sinaimg.cn/large/88b26e1cgy1frpq5olvaqj20sg0lc126.jpg"
+coverimg: "https://ws1.sinaimg.cn/large/88b26e1cgy1fx5a8lr7a3j23v32l3b2a.jpg"
 info: "我厌恶自己的懒惰,想要改变自己.于是我清空了之前的博客,只留下了几篇博文,我想从头来过"
 ---
 
