适配手机端
Signed-off-by: 唐翼龙 <yilong.tang@1mifudao.com>

--- a/src/posts/2018-05-27-Begin.md
+++ b/src/posts/2018-05-27-Begin.md
@@ -4,7 +4,7 @@ title: "Begin"
 layout: post
 date:   2018-05-20
 categories: LIFE
-tags: [LIFE]
+tags: [Life]
 coverimg: "https://ws1.sinaimg.cn/large/88b26e1cgy1fx5a8lr7a3j23v32l3b2a.jpg"
 info: "我厌恶自己的懒惰,想要改变自己.于是我清空了之前的博客,只留下了几篇博文,我想从头来过"
 ---
